# CLOVIS-2-MINI-ROS2-Sim

./: README.md
doc/logs/Test_2024-12-04_15-03-56/: test_information.txt
src/CLOVIS25_URDF_Assembly_V1/: CMakeLists.txt  package.xml
src/CLOVIS25_URDF_Assembly_V1 With Arms/: package.xml
src/CLOVIS25_URDF_Assembly_V1 With Arms/config/: joint_names_CLOVIS25_URDF_Assembly_V1 With Arms.yaml
src/CLOVIS25_URDF_Assembly_V1 With Arms/launch/: display.launch  gazebo.launch
src/CLOVIS25_URDF_Assembly_V1 With Arms/meshes/: Link13_AxisRy_Knee_Flexion.STL  Link14_AxisRy_Ankle_Flexion.STL  Link16_AxisRx_Toe_Flexion.STL  Link24_AxisRy_Ankle_Flexion.STL  Link26_AxisRx_Toe_Flexion.STL  Link30_AxisRy_Shoulder_Flexion.STL  LinkR0_AxisRz_Waist_Yaw.STL
src/CLOVIS25_URDF_Assembly_V1/config/: joint_names_CLOVIS25_URDF_Assembly_V1.yaml
src/CLOVIS25_URDF_Assembly_V1/launch/: display.launch  gazebo.launch
src/CLOVIS25_URDF_Assembly_V1/meshes/: Link10_AxisRy_Hips_Flexion.STL  Link14_AxisRy_Ankle_Flexion.STL  Link15_AxisRx_Ankle_Abduction.STL  Link16_AxisRx_Toe_Flexion.STL  Link1_AxisRx_Waist_Roll.STL  Link20_AxisRy_Hips_Flexion.STL  Link24_AxisRy_Ankle_Flexion.STL  LinkR0_AxisRz_Waist_Yaw.STL
src/CLOVIS25_URDF_Assembly_V1/urdf/: CLOVIS25_URDF_Assembly_V1.csv  CLOVIS25_URDF_Assembly_V1.gv  CLOVIS25_URDF_Assembly_V1.urdf
src/CLOVIS25_URDF_Assembly_V1_With_Arms/: CMakeLists.txt  package.xml
src/CLOVIS25_URDF_Assembly_V1_With_Arms/config/: joint_names_CLOVIS25_URDF_Assembly_V1_With_Arms.yaml
src/CLOVIS25_URDF_Assembly_V1_With_Arms/launch/: display.launch  gazebo.launch
src/CLOVIS25_URDF_Assembly_V1_With_Arms/meshes/: Link10_AxisRy_Hips_Flexion.STL  Link15_AxisRx_Ankle_Abduction.STL  Link20_AxisRy_Hips_Flexion.STL  Link21_AxisRx_Hips_Abduction.STL  Link23_AxisRy_Knee_Flexion.STL  Link25_AxisRx_Ankle_Abduction.STL  Link30_AxisRy_Shoulder_Flexion.STL  Link32_AxisRx_Shoulder_Abduction.STL  Link33_AxisRy_Elbow_Flexion.STL  Link35_AxisRx_Wrist_Abduction.STL  Link40_AxisRy_Shoulder_Flexion.STL  Link41_AxisRz_Shoulder_Rotation.STL  Link42_AxisRx_Shoulder_Abduction.STL  Link43_AxisRy_Elbow_Flexion.STL  Link45_AxisRx_Wrist_Abduction.STL  Link53_AxisRy_Thumb_Flexion.STL  Link54_AxisRx_IndexKnucle_Abduction.STL  Link55_AxisRy_IndexKnucle_Flexion.STL  Link59_AxisRy_MiddleFingerMiddle_Flexion.STL  Link61_AxisRz_ThumbKnucle_Rotation.STL  Link62_AxisRy_ThumbKnucle_Flexion.STL  Link63_AxisRy_Thumb_Flexion.STL  Link65_AxisRy_IndexKnucle_Flexion.STL  Link66_AxisRy_IndexMiddle_Flexion.STL  Link67_AxisRy_IndexTip_Flexion.STL  Link69_AxisRy_MiddleFingerMiddle_Flexion.STL  Link72_AxisRy_PinkyKnucle_Flexion.STL  Link73_AxisRy_PinkyMiddle_Flexion.STL  Link81_AxisRy_MiddleFingerTip_Flexion.STL  LinkR0_AxisRz_Waist_Yaw.STL
src/CLOVIS25_URDF_Assembly_V1_With_Arms/urdf/: CLOVIS25_URDF_Assembly_V1 With Arms.csv  CLOVIS25_URDF_Assembly_V1 With Arms.urdf  CLOVIS25_URDF_Assembly_V1_With_Arms.csv  CLOVIS25_URDF_Assembly_V1_With_Arms.urdf
src/CLOVIS25_URDF_V1/: CMakeLists.txt  package.xml
src/CLOVIS25_URDF_V1/config/: joint_names_CLOVIS25_URDF_V1.yaml
src/CLOVIS25_URDF_V1/launch/: display.launch  gazebo.launch
src/CLOVIS25_URDF_V1/meshes/: Link10_AxisRy_Hips_Flexion.STL  Link11_AxisRx_Hips_Abduction.STL  Link13_AxisRy_Knee_Flexion.STL  Link14_AxisRy_Ankle_Flexion.STL  Link15_AxisRx_Ankle_Abduction.STL  Link1_AxisRx_Abs_Roll.STL  Link20_AxisRy_Hips_Flexion.STL  Link30_AxisRy_Shoulder_Flexion.STL  Link31_AxisRz_Shoulder_Rotation.STL  Link32_AxisRx_Shoulder_Abduction.STL  Link33_AxisRy_Elbow_Flexion.STL  Link35_AxisRx_Wrist_Abduction.STL  Link40_AxisRy_Shoulder_Flexion.STL  Link41_AxisRz_Shoulder_Rotation.STL  Link42_AxisRx_Shoulder_Abduction.STL  Link43_AxisRy_Elbow_Flexion.STL  Link45_AxisRx_Wrist_Abduction.STL  Link51_AxisRz_ThumbKnucle_Rotation.STL  Link52_AxisRy_ThumbKnucle_Flexion.STL  Link53_AxisRy_Thumb_Flexion.STL  Link56_AxisRy_IndexMiddle_Flexion.STL  Link57_AxisRy_IndexTip_Flexion.STL  Link58_AxisRy_MiddleFingerKnucle_Flexion.STL  Link62_AxisRy_ThumbKnucle_Flexion.STL  Link64_AxisRx_IndexKnucle_Abduction.STL  Link65_AxisRy_IndexKnucle_Flexion.STL  Link68_AxisRy_MiddleFingerKnucle_Flexion.STL  Link71_AxisRy_MiddleFingerTip_Flexion.STL  Link74_AxisRy_PinkyTip_Flexion.STL  Link82_AxisRy_PinkyKnucle_Flexion.STL  Link83_AxisRy_PinkyMiddle_Flexion.STL  Link84_AxisRy_PinkyTip_Flexion.STL
src/CLOVIS25_URDF_V1/urdf/: CLOVIS25_URDF_V1.csv  CLOVIS25_URDF_V1.urdf
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/config/: aruco_to_link.yaml
src/robot_control/launch/: gazebo_gui.launch.py  moveit_control.launch.py  moveit_control2.launch.py  moveit_control_gui.launch.py  visual_sim.launch.py
src/robot_control/src/: cam_calibration.cpp  end_pose_node.cpp  moveit_control_gui.cpp  moveit_control_simple.cpp  visual_joint_state_publisher.cpp
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: aruco_planes.rviz  controller.yaml
src/robot_description/launch/: gazebo.launch.py  gazebo_move.launch.py
src/robot_description/meshes/: Link11_AxisRx_Hips_Abduction.STL  Link13_AxisRy_Knee_Flexion.STL  Link1_AxisRx_Abs_Roll.STL  Link21_AxisRx_Hips_Abduction.STL  Link23_AxisRy_Knee_Flexion.STL  Link25_AxisRx_Ankle_Abduction.STL  Link26_AxisRx_Toe_Flexion.STL  Link31_AxisRz_Shoulder_Rotation.STL  Link42_AxisRx_Shoulder_Abduction.STL
src/robot_description/urdf/: aruco.urdf.xacro  clovis2mini.urdf.xacro
src/robot_moveit_config/: .setup_assistant  package.xml
src/robot_moveit_config/config/: clovis2mini.ros2_control.xacro  clovis2mini.srdf  clovis2mini.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/robot_moveit_config/launch/: demo.launch.py  rsp.launch.py  (+6 more)
src/robot_test/: CMakeLists.txt  package.xml
src/robot_test/launch/: standard_joint_test.launch.py
src/robot_test/src/: standard_joint_test.cpp
