<?xml version="1.0" encoding="utf-8"?>
<package format="3">
  <name>robot_control</name>
  <version>0.0.1</version>
  <description>Robot Control Package</description>
  <maintainer email="eliott@todo.todo">Eliott</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Qt5 dependencies -->
  <depend>qtbase5-dev</depend>
  <depend>qt5-qmake</depend>
  <depend>libqt5widgets5</depend>

  <depend>tf2</depend> <!-- Already implicitly included via tf2_ros -->

  <!-- Export dependencies -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
