<?xml version="1.0"?>
<package format="3">
  <name>robot_description</name>
  <version>0.0.1</version>
  <description>The description package for the CLOVIS2Mini humanoid robot</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for building and running -->
  <depend>rclcpp</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros</depend>
  <depend>ros2_control</depend>
  <depend>controller_manager</depend>  <!-- Controller manager -->
  <depend>joint_state_controller</depend>  <!-- Joint state controller -->
  <depend>joint_trajectory_controller</depend>  <!-- Joint trajectory controller -->
  <depend>robot_state_publisher</depend>

  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
